# madivaru-lib-v2

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  madivaru-lib-v2.code-workspace
src/include/: mdv_common.h  mdv_digital_input.h  mdv_digital_output.h  mdv_serialport_driver.h  mdv_timer_driver.h
src/serialport/: mdv_serialport.c  mdv_serialport.h
src/utils/: mdv_sw_timer.c  mdv_sw_timer.h  mdv_sw_timer_base.c  mdv_sw_timer_base.h
test/mock/: mock_mdv_serialport_callbacks.cpp  mock_mdv_serialport_callbacks.h  mock_mdv_serialport_driver.cpp  mock_mdv_serialport_driver.h  mock_mdv_sw_timer.cpp  mock_mdv_sw_timer.h  mock_mdv_sw_timer_base.cpp  mock_mdv_sw_timer_base.h  mock_mdv_timer_driver.cpp  mock_mdv_timer_driver.h
test/unit/mdv_serialport/: CMakeLists.txt  test_mdv_serialport.cpp
test/unit/mdv_sw_timer/: CMakeLists.txt  test_mdv_sw_timer.cpp
test/unit/mdv_sw_timer_base/: CMakeLists.txt  test_mdv_sw_timer_base.cpp
